--- a/hw1/bio.html
+++ b/hw1/bio.html
@@ -4,7 +4,9 @@
 
 <head>
 	<title> Connor McCann Bio </title>
+	<meta charset='utf-8'>
 	<link rel="stylesheet" href="bio.css" type="text/css" />
+
 </head>
 
 <body>
